--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "vbanksdk/vbank-php-sdk",
     "description": "PHP SDK to easily work with the VDF Microfinance Bank APIs.",
     "keywords": [
-        "VBankSDK",
+        "VDF Bank SDK",
         "vbank-php-sdk"
     ],
     "homepage": "https://github.com/vbanksdk/vbank-php-sdk",
@@ -15,21 +15,22 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^6.5.5 || ^7.0.1",
+        "illuminate/http": "^9.0 || ^10.0"
     },
     "require-dev": {
-        "pestphp/pest": "^1.20",
         "laravel/pint": "^1.2",
-        "spatie/ray": "^1.28"
+        "pestphp/pest": "^1.20"
     },
     "autoload": {
         "psr-4": {
-            "VBankSDK\\VBank\\": "src"
+            "VBank\\SDK\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VBankSDK\\VBank\\Tests\\": "tests"
+            "VBank\\SDK\\Tests\\": "tests"
         }
     },
     "scripts": {
