--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "laravel/pint": "^1.2",
+        "mockery/mockery": "^1.6",
         "pestphp/pest": "^1.20"
     },
     "autoload": {
